--- a/ansible/playbooks/k8s/01-setup.yaml
+++ b/ansible/playbooks/k8s/01-setup.yaml
@@ -53,9 +53,9 @@
       apt_key:
         file: /tmp/k8s.gpg
         state: present
-    - name: Add Kubernetes' APT repository
+    - name: Add Kubernetes APT repository
       apt_repository:
-        filename: 'kubernetes'
+        filename: kubernetes
         repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
         state: present
     - name: Install kubernetes packages
@@ -63,7 +63,6 @@
         name:
           - kubelet={{ kubernetes.version }}
           - kubeadm={{ kubernetes.version }}
-          - kubectl={{ kubernetes.version }}
         state: present
         update_cache: true
   vars_files:
