--- a/ansible/playbooks/k8s/03-join.yaml
+++ b/ansible/playbooks/k8s/03-join.yaml
@@ -6,7 +6,7 @@
       shell: ls /etc/kubernetes/kubelet.conf
       register: cluster_stat
     - name: Join the cluster
-      shell: kubeadm join "{{ hostvars[groups['control-planes'][0]]['ansible_host'] }}:{{ kubernetes.port }}" --token={{ kubernetes.token}} --discovery-token-unsafe-skip-ca-verification
+      shell: kubeadm join "{{ hostvars[groups['control-plane'][0]]['ansible_host'] }}:{{ kubernetes.port }}" --token={{ kubernetes.token}} --discovery-token-unsafe-skip-ca-verification
       when: cluster_stat.rc != 0
   vars_files:
     - vars/main.yaml
