--- a/ansible/playbooks/k8s/main.yaml
+++ b/ansible/playbooks/k8s/main.yaml
@@ -1,3 +1,5 @@
 - import_playbook: 01-setup.yaml
 - import_playbook: 02-init.yaml
 - import_playbook: 03-join.yaml
+- import_playbook: 04-post-install.yaml
+- import_playbook: 05-creds.yaml
