--- a/ansible/playbooks/main.yaml
+++ b/ansible/playbooks/main.yaml
@@ -3,3 +3,5 @@
 - import_playbook: 03-join.yaml
 - import_playbook: 04-post-install.yaml
 - import_playbook: 05-creds.yaml
+- import_playbook: 06-node_exporter.yaml
+- import_playbook: 07-monitoring.yaml
